@@ -1,3 +1,5 @@
+* Update states of both toolbar and menu
+* Improve toolbar order
 * Use login details in title
 
 Version 4.4.0 - 2017-05-01
